kubernetes/k8s/lb/scen2/ingress-resource-dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rsc-kubedashboard
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.org/ssl-services: "kubernetes-dashboard"
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.allow-http: "false"
#    nginx.ingress.kubernetes.io/secure-backends: "true"
#    nginx.ingress.kubernetes.io/proxy-ssl-secret: kubernetes-dashboard-certs
#    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
    - hosts:
      - pvkbboard01.gclab.cz
      secretName: kubernetes-dashboard-certs
  rules:
  - host: pvkbboard01.gclab.cz
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
